--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@
                     <div class="expert-photo mx-auto mb-4 border-4 border-[var(--color-primary)]">
                         <i class="fas fa-user-tie text-4xl"></i>
                     </div>
-                    <h4 class="text-xl font-bold text-gray-800">Venkat Sai</h4>
+                    <h4 class="text-xl font-bold text-gray-800">Jeevan Chauhan</h4>
                     <p class="text-[var(--color-accent)] font-medium mt-1">Head of Enterprise Automation</p>
                     <p class="text-gray-500 text-sm mt-2">Specializing in AI-driven process optimization.</p>
                 </div>
@@ -1222,7 +1222,7 @@
                     <div class="expert-photo mx-auto mb-4 border-4 border-[var(--color-primary)]">
                         <i class="fas fa-user-tie text-4xl"></i>
                     </div>
-                    <h4 class="text-xl font-bold text-gray-800">Siva Rama Krishna</h4>
+                    <h4 class="text-xl font-bold text-gray-800">Venkat Sai</h4>
                     <p class="text-[var(--color-accent)] font-medium mt-1">VP, Client Solutions</p>
                     <p class="text-gray-500 text-sm mt-2">Expert in large-scale digital transformation.</p>
                 </div>
@@ -1231,7 +1231,7 @@
                     <div class="expert-photo mx-auto mb-4 border-4 border-[var(--color-primary)]">
                         <i class="fas fa-user-tie text-4xl"></i>
                     </div>
-                    <h4 class="text-xl font-bold text-gray-800">Sonia Kapoor</h4>
+                    <h4 class="text-xl font-bold text-gray-800">Siva Rama Krishna</h4>
                     <p class="text-[var(--color-accent)] font-medium mt-1">Lead Cloud Architect</p>
                     <p class="text-gray-500 text-sm mt-2">Specialist in AWS/Azure multi-cloud design.</p>
                 </div>
