--- a/index.html
+++ b/index.html
@@ -2184,10 +2184,11 @@
                     </div>
                     <h3>The Problem</h3>
                     <ul>
-                        <li>Disconnected teams operating in silos</li>
+						<li>Manual Overhead Challenges</li>
+						<li>Fragmented Workflows and Processes</li>
                         <li>Manual bottlenecks slowing approvals</li>
-                        <li>Fragmented processes causing inefficiency</li>
                         <li>Tool overload increasing complexity</li>
+						<li>Disconnected teams operating in silos</li>
                     </ul>
                 </div>
                 <div class="solution ps-item fade-in">
@@ -2196,10 +2197,11 @@
                     </div>
                     <h3>Our Solution</h3>
                     <ul>
+						<li>Intelligent Automation Solutions</li>
                         <li>Unified processes for all teams</li>
-                        <li>Enhanced cross-team collaboration</li>
-                        <li>Optimized operations & boosted efficiency</li>
-                        <li>AI-powered automated approvals</li>
+						<li>AI-powered automated Processes and approvals</li>
+                        <li>Streamlined DevOps with Tool Consolidation</li>
+						<li>Enhanced cross-team collaboration</li>
                     </ul>
                 </div>
             </div>
